[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonnia"
version = "0.3.2"
#dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    'keras >= 3',
    'matplotlib',
    'olga >= 1.1.3',
    'numpy',
    'pandas',
    'seaborn',
    'scikit-learn',
    'scipy >= 1.10',
    'tensorflow >= 2.16',
    'tqdm',
]
authors = [ {name = "Giulio Isacchini", email = "giulioisac@gmail.com"}]
maintainers = [{name = "Giulio Isacchini", email = "giulioisac@gmail.com"}]
description = 'SoNNia is a Python 3 software developed to infer selection pressures on features of amino acid CDR3 sequences. SoNNia takes as input TCR CDR3 amino acid sequences with  V and J genes. Its output is sequence-level selection factors which indicate how more or less represented this sequence would be in the selected pool as compared to the pre-selected pool. These in turn could be used to calculate the probability of observing any sequence after selection and sample from the selected repertoire.'
readme = "README.md"
license = {file = "LICENSE"}
classifiers=[
            'Development Status :: 3 - Alpha',
            'Intended Audience :: Developers',
            'Intended Audience :: Healthcare Industry',
            'Intended Audience :: Science/Research',
            'Topic :: Scientific/Engineering :: Bio-Informatics',
            'Topic :: Scientific/Engineering :: Physics',
            'Topic :: Scientific/Engineering :: Medical Science Apps.',
            'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
            'Natural Language :: English',
            'Programming Language :: Python :: 3.9',
            'Programming Language :: Python :: 3.10',
            'Programming Language :: Python :: 3.11',
            'Programming Language :: Python :: 3.12',
            ]
             
[project.urls]
Homepage = "https://github.com/statbiophys/soNNia"
Documentation = "https://sonnia.readthedocs.io/en/latest/index.html"

[project.scripts]
sonnia-infer='sonnia.infer:main'
sonnia-generate='sonnia.generate:main'
sonnia-evaluate='sonnia.evaluate:main'
